# nexus

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  SAFEHAVEN_DEPOSIT_BLOCKER.md  SWAGGER_LOCATION_SUMMARY.md  SWAGGER_TESTING_GUIDE.md  hospital_dataset_schema_and_collection.xlsx  render.yaml  test_location_endpoints.sh  verify_swagger_location.sh
docs/: FINAL_IMPLEMENTATION_SUMMARY.md  HOSPITAL_APPROVAL_FEATURE.md  LOCAL_DATABASE_SETUP.md  SHIFT_CREATION_FEATURE.md  SWAGGER_COMPLETE.md  SWAGGER_INTEGRATION_SUMMARY.md
migrations/: 20240017_clinician_registration.sql  20240018_auth_login.sql  20240019_email_outbox.sql  20240020_email_otp_codes.sql  20240021_shift_applications.sql  20240022_create_patient_pipeline.sql  20240023_create_patient_training_data.sql  20240026_clockin_method_virtual.sql  20240027_shift_dismissals.sql  20240031_paystack_to_safehaven.sql  20240032_hospital_wallet.sql  20240033_platform_revenue.sql  20240034_users_otp_only.sql  20240035_users_email_ci_unique.sql  20240036_identity_verifications.sql  20240037_wallet_subaccount_provisioning.sql
ml-service/: .env.example  generate_training_data.py  main.py  requirements.txt  seed_database.py  test_against_dataset.py  train_models.py
ml-service/data/: patients_training.csv
ml-service/models/: label_classes.json  routing_rules.json
src/: lib.rs  main.rs
src/handlers/: admin.rs  auth.rs  clinician_registration.rs  distance.rs  earnings.rs  feedback.rs  here_maps.rs  hospitals.rs  identity.rs  location.rs  ml_health.rs  mod.rs  patients.rs  pipeline.rs  pipeline_gateway.rs  registration.rs  shifts.rs  wallet.rs  webhooks.rs
src/middlewares/: mod.rs  require_role.rs
src/models/: access_policy.rs  accreditation.rs  admin_registration.rs  billing.rs  clinician.rs  clinician_registration.rs  distance.rs  email_outbox.rs  feedback.rs  here_maps.rs  hospital.rs  location.rs  mod.rs  patient.rs  registration.rs  shift.rs  user.rs  wallet.rs
src/repositories/: audit.rs  billing.rs  clinician.rs  email_outbox.rs  feedback.rs  hospital.rs  identity_verification.rs  location.rs  mod.rs  patient.rs  shift.rs  wallet.rs
src/routes/: admin_routes.rs  app_routes.rs  mod.rs
src/schedulers/: broadcast.rs  expiry.rs  handover.rs  mod.rs  payout.rs
src/services/: audit_service.rs  auth_service.rs  bronze_service.rs  clinician_registration_service.rs  distance_service.rs  email_outbox_service.rs  email_templates.rs  encryption.rs  geocoding.rs  (+18 more)
tests/: admin_authz_tests.rs  shift_creation_tests.rs
(+8 files in other folders)
