[package]
name = "nexuscare_backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nexuscare_backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }

# Database (SQLx with PostgreSQL)
# "offline" enables compile-time query checking from a cached .sqlx directory
# without a live database connection (run `cargo sqlx prepare` to regenerate).
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }

# Validation
validator = { version = "0.19.0", features = ["derive"] }
regex = { version = "1.11.1" }

# UUIDs
uuid = { version = "1.23.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4.40", features = ["serde"] }

# Error handling
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.98" }

# Environment / config
dotenvy = { version = "0.15.7" }
config = { version = "0.15.11" }

# Logging / tracing
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Password hashing
argon2 = { version = "0.5.3" }
bcrypt = { version = "0.16.0" }

# Encryption
aes-gcm = { version = "0.10.3" }
base64 = { version = "0.22.1" }

# JWT
jsonwebtoken = { version = "9.3.1" }

# HTTP client (for CAC verification calls)
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }

# SSE / async streams
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = { version = "0.3" }

# API Documentation (Swagger/OpenAPI)
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
hex = "0.4.3"
sha2 = { version = "0.10.8" }
hmac = { version = "0.12.1" }
subtle = { version = "2.6.1" }
rand = { version = "0.8.5" }
lettre = { version = "0.11.10", features = ["tokio1-native-tls", "smtp-transport", "builder"], default-features = false }

[dev-dependencies]
tokio-test = "0.4.4"
proptest = "1.6.0"
tower = { version = "0.5", features = ["util"] }
